form background in settings and gaps on cards fixed

--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,10 @@ a {
     background-color: var(--header-color);
 }
 
+.align-left {
+    align-items: start;
+}
+
 .error-text {
     max-width: 500px;
     font-family: var(--main-font-family);
